# Hackathon-equipe_5

./: .gitignore  Read_me  Terminology  - Too Good To Go.xlsx  config.yaml  config2.yaml  config_grid.yml  explordata.py  gather_scores.py  get_score.py  logit.py  poubelle.py  pyproject.toml  save_mlflow_dict.yml  send_score.py  test.ipynb
.ipynb_checkpoints/: test-checkpoint.ipynb
figure/dummy_dummy_sample/: config.yml
gab/: report.html
lightgbm_500000_iterative_False_lightgbm/: MLmodel  model.pkl
mlruns/0/: meta.yaml
mlruns/0/005aa4f1b7a1490b9cfa9dc07a132c01/: meta.yaml
mlruns/0/1e35fdb2a88f43bda5257ff8134e80f0/: meta.yaml
mlruns/0/2aa795f7d1f849348018bbf558c374f2/: meta.yaml
mlruns/0/2f231386916a4f13a7a9eec0ac25df10/: meta.yaml
mlruns/0/4474fc8e6b184902bd57ed79c03b71d9/: meta.yaml
mlruns/0/47e3343d5f2d47b39f7ee1a0d6b62f64/: meta.yaml
mlruns/0/483e24f9b8284ecca89a9ad6c1a03d0d/: meta.yaml
mlruns/0/57f56bd9649048ad880fb27c8037390e/: meta.yaml
mlruns/0/67613b9a71de44f3914782fc3e38ff05/: meta.yaml
mlruns/0/7a45734e778d4f6a9c1ad976407fdfa3/: meta.yaml
mlruns/0/8e74af55738d4be08d7d76fa4b7fcfc4/: meta.yaml
mlruns/0/9dbaaa63bf6b404ca4224ec42684b81f/: meta.yaml
mlruns/0/a8611f3fa043464bbc5a7910c283f230/: meta.yaml
mlruns/0/b2a1fa87402344469790b1c59fd6410a/: meta.yaml
model/: dummy_dummy_sample.pkl
mutual_information/: mutual_info.py  random_research.py
src/: config.py  feature_importance.py  plot.py  preprocess.py  raw.py  run.py  test.py  train.py  utils.py
src/dash/: app.py  essai.py  main.py
src/dash/assets/: style.css
(+71 files in other folders)
