[tool.poetry]
name = "btchplease"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[[tool.poetry.source]]
name = "sncf"
url = "https://nexusm-repo-mob.apps.eul.sncf.fr/repository/pypi-public/simple/"
default = true

[tool.poetry.dependencies]
python = "3.6.8"
pandas = "1.1.5"
ipdb = ">0.13.4"
scikit-learn = "0.23.2"
xgboost = "1.1.1"
pyyaml = "5.3.1"
joblib = "1.0.1"
psycopg2 = "^2.8.6"
munch = '2.5.0'
dynamic-yaml = "1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"