[tool.poetry]
name = "btchplease"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[[tool.poetry.source]]
name = "sncf"
url = "https://nexusm-repo-mob.apps.eul.sncf.fr/repository/pypi-public/simple/"
default = true

[tool.poetry.dependencies]
python = "3.6.8"
Cython = ">=0.28.2"
pandas = ">=1.0.0"
scikit-learn = "0.24.1"
xgboost = "1.3.3"
pyyaml = "5.3.1"
psycopg2 = "^2.8.4"
joblib = "1.0.1"
ipdb = "0.13.4"
mlflow = "1.13.1"
matplotlib = "3.3.4"
seaborn = "0.11.1"
plotly = "4.14.3"
shap = "0.39.0"
dynamic-yaml = "1.2.3"
munch = '2.5.0'
dash = '1.20.0'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"